* Remove commented-out debugging line * Spacing * Use lowercase element names, for consistency and standards compliance (element names are case-sensitive in XHTML) Add mention of the bug number!  Otherwise this is completely mysterious.

--- a/skins/monobook/IE60Fixes.css
+++ b/skins/monobook/IE60Fixes.css
@@ -80,8 +80,8 @@ div.tright,
 div.tleft {
 	position: relative;
 }
-/*{ border:1px solid Red !important;}*/
 
-BODY.rtl #preftoc a, BODY.rtl #preftoc a:active {
-	float:left;
+/* bug 12846 */
+body.rtl #preftoc a, body.rtl #preftoc a:active {
+	float: left;
 }
